2007-07-04  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/client.c: 
	Fixed 1745279: sfcc does not support complex array types as IN args.
	Datatypes CMPI_refA and CMPI_instanceA were not handled properly.

2007-06-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/objectpath.c: 
	Fixed 1743362: segfault on 64-bit systems

2007-06-20  Sven Schuetz <sven@de.ibm.com>

	* property.c:
	Fixed 1737254: sfcc can segfault when setting null values

2007-06-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/client.c: 
	Fixed 1740368: memory can be corrupted when long string properties are
	being set, due to static buffer usage.

2007-05-31  Adrian Schuur

	* cimXmlResp.y:
	Fixed 1726113: Parser not clearing qualifier cache

2007-05-24  Adrian Schuur

	* objectpath.c:
	Fixed 1722381 sfcc fails on getInstance for associations

2007-03-15  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* frontend/sfcc/sfcclient.c:
	Fixed 1681555: sfcc backend selection via "scheme" parameter

	* cimc/cimcft.h, TEST/test_gc.c, TEST/test_qualifiers.c: 
	Fixed 1681487: sfcc cimc constclass definition incompatible with cmci
	constclass definition, adjusted function table.

	* frontend/sfcc/sfcclient.c: 
	Fixed 1681489: sfcc connection release function restore leads to 
	failures.

2007-03-07  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/instance.c, backend/cimxml/objectpath.c,
	backend/cimxml/property.c, backend/cimxml/qualifier.c: 
	Fixed 1675554: case sensitive comparisons

	* TEST/show.c, TEST/test_ecn_ssl.c, TEST/test_gc.c:
	Updated test programs, partially related to 1675554.

2007-02-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* frontend/sfcc/sfcclient.c: 
	Fixed 1670019: connection failures on second parallel connection
	Uninitialized variables and a deadlock situation didn't allow