@@ -1,3 +1,8 @@
+2007-06-20  Sven Schuetz <sven@de.ibm.com>
+
+	* backend/cimxml/cimXmlParser.c, backend/cimxml/cimXmlResp.y:
+	Fixed 1777906 issue with the SFCC xml parsing code
+	
 2007-07-04  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
 
 	* backend/cimxml/client.c: 
